--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Node Server Testing Challenge",
   "main": "server.js",
   "scripts": {
-    "test": "corss-env NODE_ENV=testing jest",
-    "server": "cross-env NODE_ENV=development nodemon index.js"
+    "test": "cross-env NODE_ENV=testing jest",
+    "server": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "node index.js"
   },
   "jest": {
     "testEnvironment": "node"
